--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -12,6 +12,14 @@
       "groups": {
         "": "/proxy/api/imgchest/chapter/6eyrm3wq64p"
       }
+    },
+    "2": {
+      "title": "I want to know your name",
+      "volume": "1",
+      "last_updated": "1752127398",
+      "groups": {
+        "": "/proxy/api/imgchest/chapter/dl7pdwrl87o"
+      }
     }
   }
 }
