--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -20,6 +20,14 @@
       "groups": {
         "": "/proxy/api/imgchest/chapter/dl7pdwrl87o"
       }
+    },
+    "3": {
+      "title": "A sleepless night",
+      "volume": "1",
+      "last_updated": "1752453477",
+      "groups": {
+        "": "/proxy/api/imgchest/chapter/m9yx8p2v67q"
+      }
     }
   }
 }
