--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -28,6 +28,14 @@
       "groups": {
         "": "/proxy/api/imgchest/chapter/m9yx8p2v67q"
       }
+    },
+    "4": {
+      "title": "Akarin",
+      "volume": "1",
+      "last_updated": "1752896759",
+      "groups": {
+        "": "/proxy/api/imgchest/chapter/agyv9ora978"
+      }
     }
   }
 }
