--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -36,6 +36,14 @@
       "groups": {
         "": "/proxy/api/imgchest/chapter/agyv9ora978"
       }
+    },
+    "4.5": {
+      "title": "Volume Extra",
+      "volume": "1",
+      "last_updated": "1752956488",
+      "groups": {
+        "": "/proxy/api/imgchest/chapter/ne7bkbomk75"
+      }
     }
   }
 }
