--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -37,6 +37,14 @@
         "": "/proxy/api/imgchest/chapter/agyv9ora978"
       }
     },
+    "5": {
+      "title": "I can't help but be excited for karaoke",
+      "volume": "2",
+      "last_updated": "1753245843",
+      "groups": {
+        "": "/proxy/api/imgchest/chapter/qb4z8x6av4j"
+      }
+    },
     "4.5": {
       "title": "Volume Extra",
       "volume": "1",
