--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -45,6 +45,14 @@
         "": "/proxy/api/imgchest/chapter/qb4z8x6av4j"
       }
     },
+    "6": {
+      "title": "Online Friend",
+      "volume": "1",
+      "last_updated": "1753397578",
+      "groups": {
+        "": "/proxy/api/imgchest/chapter/md7oqmklr4p"
+      }
+    },
     "4.5": {
       "title": "Volume Extra",
       "volume": "1",
