--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -53,6 +53,14 @@
         "": "/proxy/api/imgchest/chapter/md7oqmklr4p"
       }
     },
+    "7": {
+      "title": "Trying",
+      "volume": "1",
+      "last_updated": "1753787731",
+      "groups": {
+        "": "/proxy/api/imgchest/chapter/9249povza7n"
+      }
+    },
     "4.5": {
       "title": "Volume Extra",
       "volume": "1",
