--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -61,6 +61,14 @@
         "": "/proxy/api/imgchest/chapter/9249povza7n"
       }
     },
+    "8": {
+      "title": "Another Secret",
+      "volume": "1",
+      "last_updated": "1753922679",
+      "groups": {
+        "": "/proxy/api/imgchest/chapter/9ryd6vw5l7k"
+      }
+    },
     "4.5": {
       "title": "Volume Extra",
       "volume": "1",
