--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -69,6 +69,14 @@
         "": "/proxy/api/imgchest/chapter/9ryd6vw5l7k"
       }
     },
+    "9": {
+      "title": "This is what it is to be young",
+      "volume": "",
+      "last_updated": "1754093516",
+      "groups": {
+        "": "/proxy/api/imgchest/chapter/ljyq2ga8ky2"
+      }
+    },
     "4.5": {
       "title": "Volume Extra",
       "volume": "1",
