--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -77,6 +77,14 @@
         "": "/proxy/api/imgchest/chapter/ljyq2ga8ky2"
       }
     },
+    "10": {
+      "title": "I wasn't expecting you to be there",
+      "volume": "",
+      "last_updated": "1754721057",
+      "groups": {
+        "": "/proxy/api/imgchest/chapter/wl7lokbeq7x"
+      }
+    },
     "4.5": {
       "title": "Volume Extra",
       "volume": "1",
