--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -85,6 +85,14 @@
         "": "/proxy/api/imgchest/chapter/wl7lokbeq7x"
       }
     },
+    "11": {
+      "title": "\"Sister\"",
+      "volume": "",
+      "last_updated": "1757552249",
+      "groups": {
+        "": "/proxy/api/imgchest/chapter/xny8mravp7b"
+      }
+    },
     "4.5": {
       "title": "Volume Extra",
       "volume": "1",
