--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -93,6 +93,14 @@
         "": "/proxy/api/imgchest/chapter/xny8mravp7b"
       }
     },
+    "12": {
+      "title": "I wanted to comfort her",
+      "volume": "2",
+      "last_updated": "1759866057",
+      "groups": {
+        "": "/proxy/api/imgchest/chapter/vj4je3lx278"
+      }
+    },
     "4.5": {
       "title": "Volume Extra",
       "volume": "1",
