--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -94,11 +94,11 @@
       }
     },
     "12": {
-      "title": "I wanted to comfort her",
+      "title": "She wanted to be comforted",
       "volume": "2",
       "last_updated": "1759866057",
       "groups": {
-        "": "/proxy/api/imgchest/chapter/vj4je3lx278"
+        "": "/proxy/api/imgchest/chapter/wl7lakqepyx"
       }
     },
     "4.5": {
