--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -95,7 +95,7 @@
     },
     "12": {
       "title": "She wanted to be comforted",
-      "volume": "2",
+      "volume": "",
       "last_updated": "1759866057",
       "groups": {
         "": "/proxy/api/imgchest/chapter/wl7lakqepyx"
