--- a/OnlyIKnow.json
+++ b/OnlyIKnow.json
@@ -117,6 +117,14 @@
         "": "/proxy/api/imgchest/chapter/ej7medmq9yd"
       }
     },
+    "15": {
+      "title": "Before leaving",
+      "volume": "",
+      "last_updated": "1770558427",
+      "groups": {
+        "": "/proxy/api/imgchest/chapter/ej7mvjwxq7d"
+      }
+    },
     "4.5": {
       "title": "Volume Extra",
       "volume": "1",
